@@ -56,22 +56,25 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <release>4.0.1-SNAPSHOT</release>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
 
-    <assertj.version>3.23.1</assertj.version>
-    <byte-buddy.version>1.12.18</byte-buddy.version>
-    <commons-net.version>3.8.0</commons-net.version>
-    <commons-text.version>1.10.0</commons-text.version>
-    <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
-    <hamcrest.version>2.2</hamcrest.version>
-    <guava.version>31.1-jre</guava.version>
-    <gson.version>2.9.1</gson.version>
-    <jsoup.version>1.15.3</jsoup.version>
-    <jersey.version>3.1.0-M8</jersey.version>
-    <javax-jaxb.version>2.4.0-b180830.0359</javax-jaxb.version>
-    <log4j2.version>2.19.0</log4j2.version>
-    <junit.version>5.9.1</junit.version>
+    <assertj.version>3.27.4</assertj.version>
+    <byte-buddy.version>1.17.7</byte-buddy.version>
+    <commons-compress.version>1.28.0</commons-compress.version>
+    <commons-net.version>3.12.0</commons-net.version>
+    <commons-lang.version>3.19.0</commons-lang.version>
+    <commons-text.version>1.14.0</commons-text.version>
+    <exec-maven-plugin.version>3.5.1</exec-maven-plugin.version>
+    <hamcrest.version>3.0</hamcrest.version>
+    <guava.version>33.4.8-jre</guava.version>
+    <gson.version>2.13.1</gson.version>
+    <jsoup.version>1.21.1</jsoup.version>
+    <jersey.version>3.1.11</jersey.version>
+    <javax-jaxb.version>4.0.2</javax-jaxb.version>
+    <log4j2.version>2.25.1</log4j2.version>
+    <jetbrains-annotations.version>22.0.0</jetbrains-annotations.version>
+    <junit.version>5.13.4</junit.version>
     <license-maven-plugin.version>2.0.0</license-maven-plugin.version>
     <maven-assembly-plugin.version>3.4.2</maven-assembly-plugin.version>
     <maven-dependency-plugin.version>3.3.0</maven-dependency-plugin.version>
@@ -84,9 +87,12 @@
     <maven-resources-plugin.version>3.3.0</maven-resources-plugin.version>
     <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
     <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
-    <mockito.version>4.8.0</mockito.version>
+    <mockito.version>5.19.0</mockito.version>
     <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
-    <wiremock.version>2.34.0</wiremock.version>
+    <okhttp3.version>4.10.0</okhttp3.version>
+    <wiremock.version>2.35.2</wiremock.version>
+    <xz.version>1.10</xz.version>
+    <yacl4j-core.version>0.9.2</yacl4j-core.version>
     <docker-maven-plugin.version>0.40.2</docker-maven-plugin.version>
     <sortpom-maven-plugin.version>3.2.0</sortpom-maven-plugin.version>
   </properties>
@@ -118,11 +124,38 @@
   </dependencyManagement>
 
   <dependencies>
-    <!-- MLib -->
+
     <dependency>
-      <groupId>de.mediathekview</groupId>
-      <artifactId>MLib</artifactId>
-      <version>4.0.1-SNAPSHOT</version>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-compress</artifactId>
+      <version>${commons-compress.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>${commons-lang.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+      <version>${commons-text.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.tukaani</groupId>
+      <artifactId>xz</artifactId>
+      <version>${xz.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.fabriziocucci</groupId>
+      <artifactId>yacl4j-core</artifactId>
+      <version>${yacl4j-core.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>${okhttp3.version}</version>
     </dependency>
 
     <!-- Google Guava for rate limiting on Arte -->
@@ -147,6 +180,10 @@
 
     <dependency>
       <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-common</artifactId>
     </dependency>
     <dependency>
@@ -154,8 +191,8 @@
       <artifactId>jersey-hk2</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.xml.bind</groupId>
-      <artifactId>jaxb-api</artifactId>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
       <version>${javax-jaxb.version}</version>
     </dependency>
 
@@ -169,7 +206,13 @@
       <artifactId>log4j-core</artifactId>
     </dependency>
 
-    <!-- Unit Tests -->
+    <dependency>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations</artifactId>
+      <version>${jetbrains-annotations.version}</version>
+    </dependency>
+
+      <!-- Unit Tests -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -339,7 +382,7 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>${maven-javadoc-plugin.version}</version>
         <configuration>
-          <additionalOptions>--enable-preview --source ${maven.compiler.target}</additionalOptions>
+          <additionalOptions>--source ${maven.compiler.target}</additionalOptions>
         </configuration>
         <executions>
           <execution>
@@ -367,9 +410,6 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
-        <configuration>
-          <compilerArgs>--enable-preview</compilerArgs>
-        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -378,7 +418,6 @@
           <parallel>classes</parallel>
           <useUnlimitedThreads>true</useUnlimitedThreads>
           <perCoreThreadCount>true</perCoreThreadCount>
-          <argLine>--enable-preview</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -415,6 +454,25 @@
           <execution>
             <goals>
               <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.11</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>report</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>report</goal>
             </goals>
           </execution>
         </executions>
